--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="moritz.png">
 <meta name="theme-color" content="#f0f0f0">
-<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-status-bar-style" content="#f0f0f0">
 
 <title>Moritz Rippe</title>
 <meta name="description" content="Copyright © 2026 Moritz Rippe. All rights reserved.">
