--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="moritz.png">
-<meta name="theme-color" content="#f0f0f0">
+    <link rel="mask-icon" href="icon/safari-pinned-tab.svg" color="#f0f0f0">
+    <meta name="msapplication-TileColor" content="#f0f0f0">
+    <meta name="theme-color" content="#f0f0f0">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 <title>Moritz Rippe</title>
