--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="mask-icon" href="icon/safari-pinned-tab.svg" color="#f0f0f0">
     <meta name="msapplication-TileColor" content="#f0f0f0">
     <meta name="theme-color" content="#f0f0f0">
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="theme-color" content="#f0f0f0">
+
+    
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 <title>Moritz Rippe</title>
