--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <meta name="msapplication-TileColor" content="#f0f0f0">
     <meta name="theme-color" content="#f0f0f0">
 
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="theme-color" content="#f0f0f0">
+        <meta name="theme-color" content="#f0f0f0">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
+        <meta name="theme-color" content="#f0f0f0" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#f0f0f0" media="(prefers-color-scheme: dark)">
 
     
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
