--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body {
     font-family: 'CopyFont', -apple-system, BlinkMacSystemFont, sans-serif;
     color: var(--text-primary);
     -webkit-font-smoothing: antialiased;
-    background: white;
+    background-color: #000000;
 }
 
 .header {
