--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="moritz.png">
+<link rel="icon" type="image/png" href="title_icon.png">
     <link rel="mask-icon" href="icon/safari-pinned-tab.svg" color="#f0f0f0">
     <meta name="msapplication-TileColor" content="#f0f0f0">
     <meta name="theme-color" content="#f0f0f0">
